--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.12.2",
     "cli-progress": "^3.12.0",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
